05.deployment/03.istio/03.parallel-request-routing/deployment-mouse-catalog.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mouse-catalog
  labels:
    app: mouse-catalog
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mouse-catalog
      version: v1
  template:
    metadata:
      labels:
        app: mouse-catalog
        version: v1
    spec:
      containers:
        - name: mouse-catalog
          image: mouse-catalog:v1
          imagePullPolicy: Never
          ports:
            - containerPort: 8080
              protocol: TCP
