05.deployment/03.istio/03.parallel-request-routing/service-mouse-catalog.yaml
apiVersion: v1
kind: Service
metadata:
  name: mouse-catalog
  labels:
    app: mouse-catalog
spec:
  ports:
    - name: http
      port: 8080
      targetPort: 8080
  type: ClusterIP
  selector:
    app: mouse-catalog
