05.deployment/03.istio/03.parallel-request-routing/service-mouse-reviews.yaml
apiVersion: v1
kind: Service
metadata:
  name: mouse-reviews
  labels:
    app: mouse-reviews
spec:
  ports:
    - port: 8081
      name: http
      targetPort: 8080
  selector:
    app: mouse-reviews
